tests/ui/rfc-2632-const-trait-impl/std-impl-gate.gated.stderr
error[E0635]: unknown feature `const_default_impls`
  --> $DIR/std-impl-gate.rs:6:46
   |
LL | #![cfg_attr(gated, feature(const_trait_impl, const_default_impls))]
   |                                              ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0635`.
